feat: add a ui to albatross scoreboard (#4)
* init: add ui

* feat: add user search
